readAllBytes and FileReader.transferTo is not supported in java 11. using apache commons instead.